--- a/java/struts2-demo/pom.xml
+++ b/java/struts2-demo/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>helloworld</module>
         <module>interceptor</module>
+        <module>resultType</module>
     </modules>
 
     <properties>
