how to use valueStack

--- a/java/struts2-demo/pom.xml
+++ b/java/struts2-demo/pom.xml
@@ -12,6 +12,7 @@
         <module>helloworld</module>
         <module>interceptor</module>
         <module>resultType</module>
+        <module>valueStack</module>
     </modules>
 
     <properties>
