--- a/java/struts2-demo/pom.xml
+++ b/java/struts2-demo/pom.xml
@@ -14,6 +14,7 @@
         <module>resultType</module>
         <module>valueStack</module>
         <module>validation</module>
+        <module>typeConvert</module>
     </modules>
 
     <properties>
