add demo for controltag and exceptionHanding

--- a/java/struts2-demo/pom.xml
+++ b/java/struts2-demo/pom.xml
@@ -15,6 +15,8 @@
         <module>valueStack</module>
         <module>validation</module>
         <module>typeConvert</module>
+        <module>exceptionHanding</module>
+        <module>controltag</module>
     </modules>
 
     <properties>
