--- a/java/spring/transaction/src/main/resources/application.properties
+++ b/java/spring/transaction/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://192.168.1.107:3306/mydb?useSSL=false
+spring.datasource.username=mysqluser
+spring.datasource.password=mysqluser
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=none
