--- a/java/spring/transaction/src/main/resources/application.properties
+++ b/java/spring/transaction/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=mysqluser
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=none
+logging.level.ROOT=INFO
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
