add comments for pom.xml

--- a/java/spring/basic-features/springjsp2/pom.xml
+++ b/java/spring/basic-features/springjsp2/pom.xml
@@ -21,6 +21,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- for jsp -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
@@ -30,6 +31,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
         </dependency>
+        <!-- for jsp -->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
