--- a/java/spring/autoconfig/example3/pom.xml
+++ b/java/spring/autoconfig/example3/pom.xml
@@ -9,13 +9,12 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>myservice-spring-boot-starter</artifactId>
+    <artifactId>example3</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>myservice</name>
-    <description>An example of how to use autoconfig</description>
+    <name>example3</name>
+    <description>example3</description>
     <properties>
         <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
@@ -28,14 +27,8 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-<!--
+
     <build>
         <plugins>
             <plugin>
@@ -44,6 +37,5 @@
             </plugin>
         </plugins>
     </build>
-    -->
 
 </project>
