--- a/java/spring/autoconfig/example3/greeter-spring-boot-autoconfigure/pom.xml
+++ b/java/spring/autoconfig/example3/greeter-spring-boot-autoconfigure/pom.xml
@@ -9,41 +9,28 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>myservice-spring-boot-starter</artifactId>
+    <artifactId>greeter-spring-boot-starter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>myservice</name>
-    <description>An example of how to use autoconfig</description>
+    <name>greeter-spring-boot-starter</name>
+    <description>greeter-spring-boot-starter</description>
     <properties>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <greeter.version> 0.0.1-SNAPSHOT</greeter.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>com.example</groupId>
+            <artifactId>greeter</artifactId>
+            <version>${greeter.version}</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
-<!--
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-    -->
+
 
 </project>
