--- a/java/groovy/pom.xml
+++ b/java/groovy/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>groovy-all</artifactId>
             <version>2.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
