--- a/java/groovy/pom.xml
+++ b/java/groovy/pom.xml
@@ -20,6 +20,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.holgerbrandl</groupId>
+            <artifactId>jsonbuilder</artifactId>
+            <version>0.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
