--- a/java/spring/sso/demo1-jwt-only/authtication-service/pom.xml
+++ b/java/spring/sso/demo1-jwt-only/authtication-service/pom.xml
@@ -43,6 +43,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.sso.jwt.example</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
