--- a/java/spring/sso/demo1-jwt-only/authtication-service/src/main/resources/application.properties
+++ b/java/spring/sso/demo1-jwt-only/authtication-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.datasource.url=jdbc:mysql://192.168.1.107:3306/jwt_demo?useSSL=false
 spring.datasource.username=demouser
 spring.datasource.password=password
