--- a/java/spring/sso/demo1-jwt-only/authtication-service/src/main/resources/application.properties
+++ b/java/spring/sso/demo1-jwt-only/authtication-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://192.168.1.107:3306/jwt_demo?useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.1.107:3306/jwt_demo?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=demouser
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
