--- a/java/spring/redis/cachemanager/src/main/resources/application.properties
+++ b/java/spring/redis/cachemanager/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.redis.port=6379
 spring.redis.password=password
 
 spring.cache.type=redis
-spring.cache.redis.cache-null-values=true
+spring.cache.redis.cache-null-values=false
