--- a/java/reactive/graphqlws/src/main/resources/application.properties
+++ b/java/reactive/graphqlws/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.graphql.websocket.path=/graphql
+spring.graphql.path=/graphql
+spring.graphql.schema.locations=classpath:graphql/**
 spring.graphql.schema.printer.enabled=true
 
 server.port=8182
