--- a/java/spring/async/pom.xml
+++ b/java/spring/async/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.0</version>
+        <version>2.7.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.redistemplate.example</groupId>
-    <artifactId>redisTemplateUsage</artifactId>
+    <groupId>com.async.example</groupId>
+    <artifactId>async</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>redisTemplateUsage</name>
-    <description>redisTemplateUsage</description>
+    <name>async</name>
+    <description>async</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -20,11 +20,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!-- Redis -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
         <dependency>
