add an example of how to use ThreadPoolExecutor

--- a/java/muti-thread/pom.xml
+++ b/java/muti-thread/pom.xml
@@ -22,6 +22,7 @@
     </build>
     <modules>
         <module>first</module>
+        <module>ThreadPoolExecutorDemo</module>
     </modules>
 
     <properties>
