--- a/java/muti-thread/pom.xml
+++ b/java/muti-thread/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>first</module>
         <module>ThreadPoolExecutorDemo</module>
+        <module>CountDownLatch</module>
     </modules>
 
     <properties>
