add example of using CompletableFuture

--- a/java/muti-thread/pom.xml
+++ b/java/muti-thread/pom.xml
@@ -24,6 +24,7 @@
         <module>first</module>
         <module>ThreadPoolExecutorDemo</module>
         <module>CountDownLatch</module>
+        <module>CompletableFuture</module>
     </modules>
 
     <properties>
