--- a/java/spring/security/MFA/src/main/resources/application.properties
+++ b/java/spring/security/MFA/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
+spring.datasource.url=jdbc:mysql://192.168.1.107:3306/jwt_demo?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=demouser
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=none
 
