enable Actuator and implement a simple authentication in authentication-service

--- a/java/spring/sso/demo4-jwt-gateway-filter/gatewaysso/gateway-service/pom.xml
+++ b/java/spring/sso/demo4-jwt-gateway-filter/gatewaysso/gateway-service/pom.xml
@@ -22,14 +22,27 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
+
+        <!-- Enable Actuator -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!-- Enable Actuator END -->
+
+        <!-- Enable Eureka -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <!-- Enable Eureka END-->
+
+        <!-- Enable SpringCloud gateway -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+        <!-- Enable SpringCloud gateway END-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
