introduce common project, generate token in the form of jwt

--- a/java/spring/sso/demo4-jwt-gateway-filter/gatewaysso/authentication-service/src/main/resources/application.yml
+++ b/java/spring/sso/demo4-jwt-gateway-filter/gatewaysso/authentication-service/src/main/resources/application.yml
@@ -19,3 +19,8 @@ management:
     web:
       exposure:
         include: health, info
+
+jannessa:
+  app:
+    jwtSecret: jannessaSecretKey
+    jwtExpirationMs: 86400000
