--- a/java/spring/sso/demo4-jwt-gateway-filter/gatewaysso/authentication-service/pom.xml
+++ b/java/spring/sso/demo4-jwt-gateway-filter/gatewaysso/authentication-service/pom.xml
@@ -16,6 +16,9 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.4</spring-cloud.version>
+        <io.jsonwebtoken-jjwt>0.9.1</io.jsonwebtoken-jjwt>
+        <jakarta.xml.bind-bind-api>4.0.0</jakarta.xml.bind-bind-api>
+        <com.sso.example-common>0.0.1-SNAPSHOT</com.sso.example-common>
     </properties>
     <dependencies>
         <dependency>
@@ -43,6 +46,34 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <!-- Enable Spring Security END-->
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${io.jsonwebtoken-jjwt}</version>
+        </dependency>
+
+        <!-- fix bug: java.lang.NoClassDefFoundError: javax/xml/bind/DatatypeConverter -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <!-- fix bug: java.lang.NoClassDefFoundError: javax/xml/bind/DatatypeConverter END-->
+
+        <!-- import common dependencies defined in commmon project -->
+        <dependency>
+            <groupId>com.sso.example</groupId>
+            <artifactId>common</artifactId>
+            <version>${com.sso.example-common}</version>
+        </dependency>
+        <!-- import common dependencies defined in commmon project END-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
