--- a/java/spring/sso/demo4-jwt-gateway-filter/gatewaysso/gateway-service/src/main/resources/application.yml
+++ b/java/spring/sso/demo4-jwt-gateway-filter/gatewaysso/gateway-service/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         - id: mybusiness-service
           uri: lb://mybusiness-service
           predicates:
-            - Path=/mybusiness/**
+            - Path=/business/**
       discovery:
         locator:
           enabled: true #turn on creating dynamic routings on register
@@ -37,3 +37,8 @@ management:
     web:
       exposure:
         include: health, info
+
+jannessa:
+  app:
+    jwtSecret: jannessaSecretKey
+    jwtExpirationMs: 86400000
