--- a/db/mysql/jpa/hibernate/src/main/resources/application.properties
+++ b/db/mysql/jpa/hibernate/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto = none
+spring.jpa.properties.hibernate.jdbc.batch_size=3
+spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.show-sql=true
