--- a/db/mysql/jpa/hibernate/src/main/resources/application.properties
+++ b/db/mysql/jpa/hibernate/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://192.168.0.200:3306/jpa_service?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://192.168.0.200:3306/jpa_service?useSSL=false&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true
 spring.datasource.username=demouser
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto = none
-spring.jpa.properties.hibernate.jdbc.batch_size=3
+spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.show-sql=true
