--- a/nodejs/express-framework/package.json
+++ b/nodejs/express-framework/package.json
@@ -9,7 +9,9 @@
   "author": "JanessaTech",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "lodash": "^4.17.21"
   }
 }
