--- a/nodejs/express-framework/package.json
+++ b/nodejs/express-framework/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "yup": "^1.2.0"
   }
 }
