--- a/blockchain/my-dpps-home/my-voting/package.json
+++ b/blockchain/my-dpps-home/my-voting/package.json
@@ -8,10 +8,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ethers": "^5.7.2",
+    "hardhat": "^2.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
