--- a/solidity/package.json
+++ b/solidity/package.json
@@ -16,6 +16,7 @@
     "hardhat": "^2.19.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.0"
+    "@openzeppelin/contracts": "^5.0.0",
+    "glob": "^7.2.0"
   }
 }
