--- a/blockchain/helia/package.json
+++ b/blockchain/helia/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "janessatech",
   "license": "ISC",
   "dependencies": {
+    "@helia/strings": "^1.0.1",
     "helia": "^2.1.0"
   }
 }
