--- a/js/algrithm/package.json
+++ b/js/algrithm/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Janessa",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "js-priority-queue": "^0.1.5"
+  }
 }
