--- a/js/algrithm/package.json
+++ b/js/algrithm/package.json
@@ -9,6 +9,7 @@
   "author": "Janessa",
   "license": "ISC",
   "dependencies": {
+    "datastructures-js": "^13.0.0",
     "js-priority-queue": "^0.1.5"
   }
 }
