--- a/solidity-interview/package.json
+++ b/solidity-interview/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chainlink/contracts": "^1.3.0",
     "@openzeppelin/contracts": "^5.2.0",
     "hardhat": "^2.22.18"
   },
