--- a/nextjs/next-redo/my-app/package.json
+++ b/nextjs/next-redo/my-app/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
+    "@types/react-slick": "^0.23.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
