--- a/nextjs/next-redo/my-app/package.json
+++ b/nextjs/next-redo/my-app/package.json
@@ -13,6 +13,7 @@
     "@types/react-slick": "^0.23.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "json-server": "^0.17.4",
     "lucide-react": "^0.477.0",
     "next": "14.2.24",
     "react": "^18",
