--- a/blockchain/my-dpps-home/dapp-challenges/next-voting/package.json
+++ b/blockchain/my-dpps-home/dapp-challenges/next-voting/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hardhat": "^2.22.18",
     "lucide-react": "^0.482.0",
     "next": "14.2.24",
     "react": "^18",
@@ -19,6 +20,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
