--- a/blockchain/my-dpps-home/dapp-challenges/next-voting/package.json
+++ b/blockchain/my-dpps-home/dapp-challenges/next-voting/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.2",
     "hardhat": "^2.22.18",
     "lucide-react": "^0.482.0",
     "next": "14.2.24",
