--- a/blockchain/my-dpps-home/redo-challenges/next-voting/voting-dapp/package.json
+++ b/blockchain/my-dpps-home/redo-challenges/next-voting/voting-dapp/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.2",
     "lucide-react": "^0.482.0",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
