--- a/nextjs/zustand-demo/package.json
+++ b/nextjs/zustand-demo/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.3.0",
     "lucide-react": "^0.511.0",
     "next": "14.2.24",
     "react": "^18",
