--- a/blockchain/wagmi/rainbowkit/package.json
+++ b/blockchain/wagmi/rainbowkit/package.json
@@ -21,7 +21,8 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.30.1",
-    "wagmi": "^2.15.4"
+    "wagmi": "^2.15.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
