--- a/nextjs/next-toolkits/package.json
+++ b/nextjs/next-toolkits/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
     "next": "14.2.24",
+    "rc-slider": "^11.1.8",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.0.2",
@@ -24,6 +25,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.24",
+    "less": "^4.3.0",
+    "next-plugin-antd-less": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
