--- a/nextjs/next-toolkits/package.json
+++ b/nextjs/next-toolkits/package.json
@@ -16,6 +16,7 @@
     "rc-slider": "^11.1.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-resizable-panels": "^3.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
