--- a/nextjs/next-toolkits/package.json
+++ b/nextjs/next-toolkits/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-resizable-panels": "^3.0.3",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "urql": "^4.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
