interact with erc20

--- a/blockchain/ethers-in-depth/package.json
+++ b/blockchain/ethers-in-depth/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
     "ethers": "^6.9.1",
     "hardhat": "^2.19.4",
     "merkletreejs": "^0.3.11"
