--- a/blockchain/hardhat-debug/package.json
+++ b/blockchain/hardhat-debug/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.26.1"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0"
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "hardhat-tracer": "^3.2.1"
   }
 }
