--- a/blockchain/tenderly-hardhat/package.json
+++ b/blockchain/tenderly-hardhat/package.json
@@ -9,14 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@uniswap/sdk-core": "^7.7.2",
-    "@uniswap/smart-order-router": "^4.22.11",
-    "@uniswap/v3-sdk": "^3.25.2",
-    "decimal.js": "^10.6.0",
     "hardhat": "^2.22.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@tenderly/hardhat-tenderly": "^2.5.2"
+    "@tenderly/hardhat-tenderly": "^2.2.2",
+    "dotenv": "^17.2.1"
   }
 }
