--- a/nodejs/nodejs-interview-crackcodebyhand/check-block-number/package.json
+++ b/nodejs/nodejs-interview-crackcodebyhand/check-block-number/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/app.ts",
+    "build": "tsc",
+    "server": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,7 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.2.1"
+    "ethers": "^6.16.0",
+    "express": "^5.2.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
