--- a/the-graph/how-to-use-live/.gitignore
+++ b/the-graph/how-to-use-live/.gitignore
@@ -1,38 +1,43 @@
-# Add any directories, files, or patterns you don't want to be tracked by version control
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+.graphclient
+
+### IntelliJ IDEA ###
 .idea
+*.iws
+*.iml
+*.ipr
 
-# ignore vs code project config files
-.vs
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# ignore logs
-logs
-*.log
+### VS Code ###
+.vscode/
 
-# ignore 3rd party lib
+#### REACT ####
 node_modules
-
-# ignore key
-*.pem
-
-# Ignore built files
+.cache
 dist
 
-# ignore test converage
-coverage
+#### logs
+/logs/
 
-# Environment varibles
-*.env
-*.env.test
-*.env copy
-
-#keys
-keys/*
-!keys/*.md
-!keys/*.example
-
-#temp
-temp
-.DS_Store
-
-*.save
-*.save.*
