--- a/nextjs/websocket(frontend+backend)/backend-ws/package.json
+++ b/nextjs/websocket(frontend+backend)/backend-ws/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx ts-node src/app.ts",
+    "start_ws": "npx ts-node src/webSocketServer.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,11 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "uuid": "^13.0.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
